Minor updates to lem config.

--- a/config/lem/lem.desktop
+++ b/config/lem/lem.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Type=Application
 Encoding=UTF-8
-Name=Lem
+Name=Lem SDL2
 Comment="Editor/IDE well-tuned for Common Lisp"
 Exec=/home/logoraz/.guix-profile/bin/lem
 Icon=/home/logoraz/.config/lem/lem-icon.png
